test/typeerrors/Examples/TooGeneral.hs
f :: a -> b -> Bool
f = undefined :: Int -> Int -> Bool
